syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Add (CalcRequest) returns (CalcResponse);
  rpc Sub (CalcRequest) returns (CalcResponse);
  rpc Mul (CalcRequest) returns (CalcResponse);
  rpc Div (CalcRequest) returns (CalcResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;  
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message CalcRequest {
	int32 a = 1;
	int32 b = 2;
}

message CalcResponse {
	int32 redsult = 1;
}